# dataPalette

./: .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
datapalette/: __init__.py  cli.py  datapalette_config.yaml  main.py
datapalette.egg-info/: PKG-INFO  SOURCES.txt
datapalette/adapters/: torch.py
datapalette/augmentation/: __init__.py  basic.py
datapalette/core/: __init__.py  functions.py
datapalette/datasets/: __init__.py  mnist.py  segmentation.py
datapalette/io/: __init__.py  batch.py  video.py
datapalette/pipelines/: __init__.py  base.py  diffusion.py  gan.py  predefined.py  segmentation.py
datapalette/preprocessing/: __init__.py  advanced.py
datapalette/transforms/: __init__.py  base.py  color.py  edges.py  filters.py  frequency.py  noise.py  spatial.py
datapalette/utils/: __init__.py  config.py  helpers.py  logging.py
scripts/: datapalette-run
tests/: conftest.py  test_cli.py
tests/test_adapters/: test_torch.py
tests/test_datasets/: test_mnist.py  test_segmentation.py
tests/test_io/: test_batch.py  test_video.py
tests/test_pipelines/: test_diffusion.py  test_gan.py  test_segmentation.py
tests/test_transforms/: test_color.py  test_edges.py  test_filters.py  test_frequency.py  test_noise.py  test_spatial.py
